--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -25,11 +25,13 @@ h4:after {
   border-bottom: solid 3px rgb(119, 195, 223);
 }
 
+/* 目次 */
 ul.m {
   border: solid 2px #ffb03f;
   padding: 0.5em;
   position: relative;
   margin-top: 2em;
+  border-radius: 0 10px 10px 10px;
 }
 ul.m li {
   line-height: 1.5;
@@ -43,7 +45,8 @@ ul.m li:last-of-type {
 ul.m li:before {
   /*リスト内のアイコン*/
   font-family: "Font Awesome 5 Free";
-  content: "\f02f";/*アイコン種類*/
+  content: "\f138";/*アイコン種類*/
+  font-weight: bold;
   position: absolute;
   left : 0.5em; /*左端からのアイコンまで*/
   color: #ffb03f; /*アイコン色*/
@@ -62,26 +65,26 @@ ul.m li:after {
 }
 
 /* 吹き出し */
-.balloon5 {
+.balloon {
   width: 100%;
   margin: 1.5em 0;
   overflow: hidden;
 }
 
-.balloon5 .faceicon {
+.balloon .faceicon {
   float: left;
   margin-right: -90px;
   width: 80px;
 }
 
-.balloon5 .faceicon img{
+.balloon .faceicon img{
   width: 100%;
   height: auto;
   border: solid 3px #d7ebfe;
   border-radius: 50%;
 }
 
-.balloon5 .chatting {
+.balloon .chatting {
   width: 100%;
 }
 
@@ -108,4 +111,19 @@ ul.m li:after {
 .says p {
   margin: 0;
   padding: 0;
+}
+
+/* 更新履歴 */
+
+ul.up{
+  background: #EEEEEE;
+  padding: 0.5em 0.5em 0.5em 2em;
+  border: solid 3px gray;
+  border-radius: 10px;
+}
+
+ul.up li {
+  line-height: 1.5;
+  padding: 0.5em 0;
+  list-style-type: none!important;
 }
