--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -127,3 +127,10 @@ ul.up li {
   padding: 0.5em 0;
   list-style-type: none!important;
 }
+
+/* 区切り線 hr */
+hr {
+	border-top: 1px dashed #8c8b8b;
+	border-bottom: 1px dashed #fff;
+	padding: 10px 0 10px 0;
+}
