--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -114,36 +114,19 @@ hr {
 }
 
 /* 上へスクロール */
-#page_top{
-  width: 50px;
-  height: 50px;
-  position: fixed;
-  right: 25px;
-  bottom: 150px;
-  background: #3f98ef;
-  opacity: 0.6;
-  border-radius: 50%;
+#page_top {
+    position: fixed;
+    bottom: 30px;
+    right: 20px;
 }
-#page_top a{
-  position: relative;
-  display: block;
-  width: 50px;
-  height: 50px;
-  text-decoration: none;
-  text-align: center;
+#page_top a {
+    background-color: #999;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    padding: 20px 20px;
 }
-#page_top a::before{
-  font-family: "Font Awesome 5 Free";
-  content: '\f106';
-  font-weight: 900;
-  font-size: 25px;
-  color: #fff;
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  top: 10px;
-  bottom: 10px;
-  right: 0;
-  left: 0;
-  margin: auto;
+#page_top a:hover {
+    background-color: #666;
+    text-decoration: none;
 }
