--- a/css/custom.css
+++ b/css/custom.css
@@ -79,7 +79,8 @@ text-align: center;
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #1DA1F2;
+  background: #ffffff;
+  color: #1DA1F2;
   line-height: 50px;
   display: inline-block;
   margin: 0 10px 20px 0;
@@ -92,6 +93,18 @@ text-align: center;
   border-radius: 50%;
   background: #ffffff;
   color: #000;
+  line-height: 50px;
+  display: inline-block;
+  margin: 0 10px 20px 0;
+  font-size: 1.25em;
+}
+
+.circle3{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #ffffff;
+  color: #1f3134;
   line-height: 50px;
   display: inline-block;
   font-size: 1.25em;
