--- a/css/custom.css
+++ b/css/custom.css
@@ -75,6 +75,18 @@ text-align: center;
 	color: #ffffff;
 }
 
+.footer a{
+	color: #f39800;
+}
+
+.footer_link{
+	border-bottom: 1px dotted #f39800;
+}
+
+.footer_link:hover{
+	border-bottom: none;
+}
+
 .circle1{
   width: 50px;
   height: 50px;
@@ -104,7 +116,7 @@ text-align: center;
   height: 50px;
   border-radius: 50%;
   background: #ffffff;
-  color: #1f3134;
+  color: #006e54;
   line-height: 50px;
   display: inline-block;
   font-size: 1.25em;
