--- a/css/custom.css
+++ b/css/custom.css
@@ -168,3 +168,8 @@ text-align: center;
 #sns_settei{
 	display: inline-block;
 }
+
+/* Facebook調整 */
+.fb_iframe_widget > span {
+		vertical-align: baseline !important;
+}
