--- a/css/custom.css
+++ b/css/custom.css
@@ -173,3 +173,9 @@ text-align: center;
 	padding:0 5px 0 0 !important;
 	margin:0 !important;
 }
+
+.title{
+  padding: .25em 0 .5em .75em;
+  border-left: 6px solid #ccc;
+  border-bottom: 1px solid #ccc;
+}
