--- a/css/custom.css
+++ b/css/custom.css
@@ -169,6 +169,10 @@ text-align: center;
 	display: inline-block;
 }
 
+.fb_iframe_widget > span {
+  vertical-align: baseline !important;
+}
+
 .post_tag{
 	padding:0 5px 0 0 !important;
 	margin:0 !important;
