--- a/css/custom.css
+++ b/css/custom.css
@@ -383,3 +383,42 @@ ul{
   margin: 0; 
   padding: 0;
 }
+
+/* 黒板　テーブル */
+.kokuban-t2 {
+ position: relative;
+ margin: 2em auto;
+ padding: 3.2em 1em 1em;
+ width: 90%; 
+ background-color: #006633; 
+ color: #fff;
+ border: 8px solid #b2771f;
+ border-radius: 3px; 
+ box-shadow: 0 0 5px #333, 0 0 5px #555 inset;
+}
+.kokuban-t2::before,
+.kokuban-t2::after {
+ position: absolute;
+ content: '';
+ bottom: 0;
+} 
+.kokuban-t2::before {
+ right: 10px;
+ border: solid 3px #fff; 
+ width: 20px; 
+ border-radius: 3px 2px 0 2px;
+}
+.kokuban-t2::after {
+ right: 40px;
+ border: solid 3px #ffff6b; 
+ width: 15px; 
+ border-radius: 8px 5px 2px 5px;
+}
+.title-t2 {
+ position: absolute;
+ left: 1em;
+ top: .5em;
+ font-weight: bold;
+ font-size: 1.1em;
+ color: #ffff6b; /* タイトル色 */
+}
