--- a/css/custom.css
+++ b/css/custom.css
@@ -351,7 +351,6 @@ h3 {
 
 @media screen and (max-width: 767px) {
   .blcard {
-    margin: 0;
     padding: .8em;
   }
 
@@ -471,4 +470,6 @@ ul{
  color: #ffff6b;
 }
 
-
+.post_date{
+  font-size: .9rem;
+}
