--- a/css/custom.css
+++ b/css/custom.css
@@ -200,12 +200,13 @@ h3 {
 }
 
 .post_tag {
-  padding: 0 5px 0 0 !important;
-  margin: 0 !important;
+  padding: 0px 5px 0px 0px !important;
+  margin: 0px !important;
 }
 
 #post_mtag{
   margin-left: .5em !important;
+  padding: 0px !important;
 }
 
 .title {
